k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fcg-games
  labels:
    app: fcg-games
