k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcg-games
  namespace: fcg-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fcg-games
  template:
    metadata:
      labels:
        app: fcg-games
    spec:
      containers:
        - name: fcg-games
          image: ${IMAGE}
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 10
