k8s/deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcg-games
  namespace: fcg-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fcg-games
  template:
    metadata:
      labels:
        app: fcg-games
    spec:
      containers:
        - name: fcg-games
          image: fiap-fcg-games-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fcg-games
  namespace: fcg-games
spec:
  type: NodePort
  selector:
    app: fcg-games
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
