k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcg-games-service
  namespace: fcg-games
  labels:
    app: fcg-games
spec:
  selector:
    app: fcg-games
  ports:
    - name: http
      protocol: TCP
      port: ${SERVICE_PORT}
      targetPort: ${CONTAINER_PORT}
  type: ClusterIP
